# CS116-2017-clea-kunz

./: Neuron.cpp  Neuron.hpp  README.md  neurontext.txt  test_neuron.cpp
Exercise1/: CMakeLists.txt  Neuron  Neuron.cpp  Neuron.hpp  main.cpp  neurontext.txt
Exercise1/src/: Drawable.hpp  Neuron  Neuron.cpp  Neuron.hpp  main.cpp  neurontext.txt
Exercise2a/: Linked.txt  Network  Network.cpp  Network.hpp  NetworkNeuron.txt  Neuron  Neuron.cpp  Neuron.hpp  neurontext.txt  test_connection.cpp  test_neuron.cpp
Exercise2b/: CMakeLists.txt
Exercise2b/src/: Linked.txt  Network  Network.cpp  Network.hpp  NetworkNeuron.txt  Neuron.cpp  Neuron.hpp  buffertext.txt  cmake_install.cmake  neurontext.txt  unittest  unittest.cpp
Exercise2b/src/Utility/: Constants.hpp
Exercise3withmatrix/: Neuron.cpp
Exercise3withmatrix/src/: AllNeurons  Buffer  CMakeCache.txt  CTestTestfile.cmake  Network  Network.cpp  Network.hpp  Neuron.hpp  a.out  test_allneurons.cpp  unittest  unittest.cpp
Exercise3withmatrix/src/Utility/: Constants.hpp
Exercise3withoutmatrixslow/src/: Doxyfile.in.bak  Makefile  Network  Network.cpp  Network.hpp  Neuron.cpp  Neuron.hpp  neurontext.txt  spikes.txt  test_allneurons.cpp  test_buffer.cpp  totalneuronstest.cpp  unittest.cpp
Exercise3withoutmatrixslow/src/Utility/: Constants.hpp
